--- a/index.html
+++ b/index.html
@@ -4,36 +4,55 @@
     <meta charset="utf-8" />
     <meta name="description" content="Web studio" />
     <title>Web studio</title>
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a class="logo-link" href="./index.html"><span>Web</span>Studio</a>
+        <ul class="navigation">
+          <li><a class="navigation-item-studio" href="">Studio</a></li>
+          <li><a class="navigation-item" href="">Portfolio</a></li>
+          <li><a class="navigation-item" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="contact">
+          <li>
+            <a class="contact-item" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-item" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="main-title">
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button class="btn" type="button">Order Service</button>
       </section>
 
-      <section>
-        <h2>Information about our company</h2>
+      <section class="information-about-company">
+        <!-- <h2>Information about our company</h2> -->
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="information-section">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -41,7 +60,7 @@
           </li>
 
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="information-section">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
@@ -49,7 +68,7 @@
           </li>
 
           <li>
-            <h3>Diligence</h3>
+            <h3 class="information-section">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
@@ -57,7 +76,7 @@
           </li>
 
           <li>
-            <h3>Technologies</h3>
+            <h3 class="information-section">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -66,37 +85,108 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
+            <h3 class="name">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
             <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
+            <h3 class="name">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-3.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
+            <h3 class="name">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
+            <h3 class="name">Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="portfolio">
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img2-1.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Banking App</h3>
+            <p>App</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/img2-2.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/img2-3.jpg"
+              alt="Phone and laptop screen"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Meditaion App</h3>
+            <p>App</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/img2-4.jpg"
+              alt="Hands on the steering wheel"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/img2-5.jpg"
+              alt="Phone screen"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/img2-6.jpg"
+              alt="A girl with a phone and headphones"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a class="logo-link-footer" href="./index.html"><span>Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
