--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <body>
     <header>
       <nav>
-        <a class="logo-link" href="./index.html"><span>Web</span>Studio</a>
+        <a class="logo-link" href="./index.html">Web<span>Studio</span></a>
         <ul class="navigation">
           <li><a class="navigation-item-studio" href="">Studio</a></li>
           <li><a class="navigation-item" href="">Portfolio</a></li>
           <li><a class="navigation-item" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="contact">
+      <address class="contact">
+        <ul>
           <li>
             <a class="contact-item" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -49,7 +49,7 @@
       </section>
 
       <section class="information-about-company">
-        <!-- <h2>Information about our company</h2> -->
+        <h2>Information about our company</h2>
         <ul>
           <li>
             <h3 class="information-section">Strategy</h3>
@@ -87,97 +87,97 @@
 
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul>
-          <li>
+        <ul class="team-information">
+          <li class="name">
             <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="name">Mark Guerrero</h3>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
-          <li>
+          <li class="name">
             <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-            <h3 class="name">Tom Ford</h3>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="name">
             <img src="./images/img-3.jpg" alt="Camila Garcia" width="264" />
-            <h3 class="name">Camila Garcia</h3>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="name">
             <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="name">Daniel Wilson</h3>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
 
       <section class="portfolio">
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-information">
+          <li class="portfolio-item">
             <img
               src="./images/img2-1.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Banking App</h3>
+            <h3>Banking App</h3>
             <p>App</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img2-2.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Cashless Payment</h3>
+            <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img2-3.jpg"
               alt="Phone and laptop screen"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Meditaion App</h3>
+            <h3>Meditaion App</h3>
             <p>App</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img2-4.jpg"
               alt="Hands on the steering wheel"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Taxi Service</h3>
+            <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img2-5.jpg"
               alt="Phone screen"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/img2-6.jpg"
               alt="A girl with a phone and headphones"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Online Courses</h3>
+            <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
         </ul>
@@ -185,7 +185,7 @@
     </main>
 
     <footer>
-      <a class="logo-link-footer" href="./index.html"><span>Web</span>Studio</a>
+      <a class="logo-link-footer" href="./index.html">Web<span>Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
