--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <nav>
         <a class="logo-link" href="./index.html">Web<span>Studio</span></a>
         <ul class="navigation">
-          <li><a class="navigation-item-studio" href="">Studio</a></li>
+          <li>
+            <a class="navigation-item-studio" href="./index.html">Studio</a>
+          </li>
           <li><a class="navigation-item" href="">Portfolio</a></li>
           <li><a class="navigation-item" href="">Contacts</a></li>
         </ul>
@@ -51,32 +53,32 @@
       <section class="information-about-company">
         <h2>Information about our company</h2>
         <ul>
-          <li>
-            <h3 class="information-section">Strategy</h3>
+          <li class="information-section">
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
-          <li>
-            <h3 class="information-section">Punctuality</h3>
+          <li class="information-section">
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
-          <li>
-            <h3 class="information-section">Diligence</h3>
+          <li class="information-section">
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
-          <li>
-            <h3 class="information-section">Technologies</h3>
+          <li class="information-section">
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -144,7 +146,7 @@
               width="360"
               height="300"
             />
-            <h3>Meditaion App</h3>
+            <h3>Meditation App</h3>
             <p>App</p>
           </li>
 
