--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="logo-link" href="./index.html">Web<span>Studio</span></a>
         <ul class="navigation">
           <li>
-            <a class="navigation-item-studio" href="./index.html">Studio</a>
+            <a class="navigation-item" href="./index.html">Studio</a>
           </li>
           <li><a class="navigation-item" href="">Portfolio</a></li>
           <li><a class="navigation-item" href="">Contacts</a></li>
@@ -54,32 +54,32 @@
         <h2>Information about our company</h2>
         <ul>
           <li class="information-section">
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="information-section-title">Strategy</h3>
+            <p class="information-section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li class="information-section">
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="information-section-title">Punctuality</h3>
+            <p class="information-section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li class="information-section">
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="information-section-title">Diligence</h3>
+            <p class="information-section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li class="information-section">
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="information-section-title">Technologies</h3>
+            <p class="information-section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -92,24 +92,24 @@
         <ul class="team-information">
           <li class="name">
             <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="name-title">Mark Guerrero</h3>
+            <p class="name-text">Product Designer</p>
           </li>
 
           <li class="name">
             <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name-title">Tom Ford</h3>
+            <p class="name-text">Frontend Developer</p>
           </li>
           <li class="name">
             <img src="./images/img-3.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="name-title">Camila Garcia</h3>
+            <p class="name-text">Marketing</p>
           </li>
           <li class="name">
             <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="name-title">Daniel Wilson</h3>
+            <p class="name-text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -124,7 +124,7 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
+            <h3 class="portfolio-item-title">Banking App</h3>
             <p>App</p>
           </li>
 
@@ -135,8 +135,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item-title">Cashless Payment</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
 
           <li class="portfolio-item">
@@ -146,8 +146,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-item-title">Meditation App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
 
           <li class="portfolio-item">
@@ -157,8 +157,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item-title">Taxi Service</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
 
           <li class="portfolio-item">
@@ -168,8 +168,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-item-title">Screen Illustrations</h3>
+            <p class="portfolio-item-text">Design</p>
           </li>
 
           <li class="portfolio-item">
@@ -179,15 +179,17 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-item-title">Online Courses</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a class="logo-link-footer" href="./index.html">Web<span>Studio</span></a>
+    <footer class="footer site">
+      <a class="logo-link-footer" href="./index.html"
+        >Web<span class="footer span">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
