--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               height="300"
             />
             <h3 class="portfolio-item-title">Banking App</h3>
-            <p>App</p>
+            <p class="portfolio-item-text">App</p>
           </li>
 
           <li class="portfolio-item">
